--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vite": "^6.0.11"
     },
     "dependencies": {
+        "alpinejs": "^3.14.9",
         "i": "^0.3.7",
         "sass": "^1.86.1"
     }
